---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 03.11.2024
  Changes:
    - Passage en 2.0.
    - Variables "global" -> "storage".
  Fixes:
    - core.lualib.event_handler : on_init, on_configuration_changed passe dans le module désormais.
    - Suppression l'appel de la methode self:delete() dans RitnLobbySurface:clean(), sera appelé lors de l'event
      on_pre_surface_deleted dans RitnBaseGame.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 15.09.2024
  Bugfixes:
    - fix : RitnGuiSurfaces => on affiche plus les surfaces en exception.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 14.09.2024
  Info:
    - Sortie du mod.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 29.01.2023
  Info:
    - Création du mod.